--- a/linear-regression.Rmd
+++ b/linear-regression.Rmd
@@ -3,11 +3,13 @@ title: "Usando Regressão Linear para Explicar a votação de Deputados"
 author: "Gustavo Monteiro"
 date: "October 3, 2018"
 output:
-  html_document:
-    df_print: paged
+  pdf_document:
+    toc: yes
+  html_notebook:
     toc: yes
     toc_float: yes
-  html_notebook:
+  html_document:
+    df_print: paged
     toc: yes
     toc_float: yes
 ---
@@ -163,7 +165,7 @@ p1 <- parties_with_more_money_2006 %>%
   geom_col() +
       labs(x="Party", 
        y="Amount") +
-  labs(title = "Partidos com mais dinheiro") +
+  labs(title = "Parties with more money") +
   coord_flip()
 
 p2 <- parties_with_more_money_2006 %>% 
@@ -171,7 +173,7 @@ p2 <- parties_with_more_money_2006 %>%
   geom_col() +
         labs(x="Party", 
        y="Amount") +
-  labs(title = "Os com mais dinheiro próprio") +
+  labs(title = "Parties with more own money") +
   coord_flip()
 
 p3 <- parties_with_more_money_2006 %>% 
@@ -179,7 +181,7 @@ p3 <- parties_with_more_money_2006 %>%
   geom_col() +
         labs(x="Party", 
        y="Amount") +
-  labs(title = "Os com mais dinheiro doado") +
+  labs(title = "Parties with more money donated") +
   coord_flip()
 
 p4 <- parties_with_more_money_2006 %>% 
@@ -187,7 +189,7 @@ p4 <- parties_with_more_money_2006 %>%
   geom_col() +
         labs(x="Party", 
        y="Amount") +
-  labs(title = "Com mais dinheiro doado por pessoas") +
+  labs(title = "Parties with more money donated by people") +
   coord_flip()
 
 p5 <- parties_with_more_money_2006 %>% 
@@ -195,7 +197,7 @@ p5 <- parties_with_more_money_2006 %>%
   geom_col() +
         labs(x="Party", 
        y="Amount") +
-  labs(title = "Os com mais dinheiro doado por empresas") +
+  labs(title = "Parties with more money donated by companies") +
   coord_flip()
 
 grid.arrange(p1, p2, p3, p4, p5, nrow = 3)
@@ -555,6 +557,21 @@ model_2010 %>%
 
 Para ambas as eleições vemos muitos valores com distancias de cook muito altas, o que mostra o o modelo é distoante com muitos dos valores, o que pode nos dizer que o modelo é bom, pois existem muitos dados que se mostram grandes influenciadores do modelo, mesmo quando a modelagem pode os ver como ouliers.
 
+# Validação 2006
+```{r}
+predictions <- model_2006 %>% predict(validate_data_2006)
+
+data.frame( R2 = R2(predictions, validate_data_2006$votos),
+            RMSE = RMSE(predictions, validate_data_2006$votos),
+            MAE = MAE(predictions, validate_data_2006$votos),
+            ERR = RMSE(predictions, validate_data_2006$votos)/
+                  mean(validate_data_2006$votos))
+```
+O modelo conseguiu um R² de 0,57, isso significa que esse modelo explica aproximadamente 57% da variabilidade da variável resposta.
+A diferença média entre os valores de resultados conhecidos observados e os valores previstos pelo modelo (RMSE) foi de aproximadamente 28340,5 issod quer dizer que o modelo erraria aproximadamente 28340, ou seja, se o candidato tivesse um milhão de votos, nós preveríamos até 28340 mais/menos do que deveríamos
+A diferença absoluta média entre os resultados observados e previstos (MAE) foi de aproximadamente 15924.48.
+A taxa de erro de previsão (ERR) foi de 1.109683.
+
 ## Teste 2006
 ```{r}
 predictions <- model_2006 %>% predict(testing_data_2006)
@@ -571,20 +588,20 @@ A diferença média entre os valores de resultados conhecidos observados e os va
 A diferença absoluta média entre os resultados observados e previstos (MAE) foi de aproximadamente 13190.14.
 A taxa de erro de previsão (ERR) foi de 1.304018.
 
-# Validação 2006
+## Validação 2010
 ```{r}
-predictions <- model_2006 %>% predict(validate_data_2006)
+predictions <- model_2010 %>% predict(validate_data_2010)
 
-data.frame( R2 = R2(predictions, validate_data_2006$votos),
-            RMSE = RMSE(predictions, validate_data_2006$votos),
-            MAE = MAE(predictions, validate_data_2006$votos),
-            ERR = RMSE(predictions, validate_data_2006$votos)/
-                  mean(validate_data_2006$votos))
+data.frame( R2 = R2(predictions, validate_data_2010$votos),
+            RMSE = RMSE(predictions, validate_data_2010$votos),
+            MAE = MAE(predictions, validate_data_2010$votos),
+            ERR = RMSE(predictions, validate_data_2010$votos)/
+              mean(validate_data_2010$votos))
 ```
-O modelo conseguiu um R² de 0,57, isso significa que esse modelo explica aproximadamente 57% da variabilidade da variável resposta.
-A diferença média entre os valores de resultados conhecidos observados e os valores previstos pelo modelo (RMSE) foi de aproximadamente 28340,5 issod quer dizer que o modelo erraria aproximadamente 28340, ou seja, se o candidato tivesse um milhão de votos, nós preveríamos até 28340 mais/menos do que deveríamos
-A diferença absoluta média entre os resultados observados e previstos (MAE) foi de aproximadamente 15924.48.
-A taxa de erro de previsão (ERR) foi de 1.109683.
+O modelo conseguiu um R² de 0,44, isso significa que esse modelo explica aproximadamente 56% da variabilidade da variável resposta.
+A diferença média entre os valores de resultados conhecidos observados e os valores previstos pelo modelo (RMSE) foi de aproximadamente 31995.79 issod quer dizer que o modelo erraria aproximadamente 31995, ou seja, se o candidato tivesse um milhão de votos, nós preveríamos até 31995 mais/menos do que deveríamos
+A diferença absoluta média entre os resultados observados e previstos (MAE) foi de aproximadamente 14931.24.
+A taxa de erro de previsão (ERR) foi de 1.399707.
 
 ## Teste 2010
 ```{r}
@@ -600,21 +617,6 @@ data.frame( R2 = R2(predictions, testing_data_2010$votos),
 O modelo conseguiu um R² de 0,56, isso significa que esse modelo explica aproximadamente 56% da variabilidade da variável resposta.
 A diferença média entre os valores de resultados conhecidos observados e os valores previstos pelo modelo (RMSE) foi de aproximadamente 29604.97 issod quer dizer que o modelo erraria aproximadamente 29604, ou seja, se o candidato tivesse um milhão de votos, nós preveríamos até 29604 mais/menos do que deveríamos
 A diferença absoluta média entre os resultados observados e previstos (MAE) foi de aproximadamente 14371.57.
-A taxa de erro de previsão (ERR) foi de 1.399707.
-
-## Validação 2010
-```{r}
-predictions <- model_2010 %>% predict(validate_data_2010)
-
-data.frame( R2 = R2(predictions, validate_data_2010$votos),
-            RMSE = RMSE(predictions, validate_data_2010$votos),
-            MAE = MAE(predictions, validate_data_2010$votos),
-            ERR = RMSE(predictions, validate_data_2010$votos)/
-              mean(validate_data_2010$votos))
-```
-O modelo conseguiu um R² de 0,44, isso significa que esse modelo explica aproximadamente 56% da variabilidade da variável resposta.
-A diferença média entre os valores de resultados conhecidos observados e os valores previstos pelo modelo (RMSE) foi de aproximadamente 31995.79 issod quer dizer que o modelo erraria aproximadamente 31995, ou seja, se o candidato tivesse um milhão de votos, nós preveríamos até 31995 mais/menos do que deveríamos
-A diferença absoluta média entre os resultados observados e previstos (MAE) foi de aproximadamente 14931.24.
 A taxa de erro de previsão (ERR) foi de 1.399707.
 
 # Um novo modelo para 2006
@@ -680,22 +682,6 @@ mod_2006 %>%
 
 Vemos também valores bem menores para distancia de cook e para bem menos pontos distoantes, o que pode nos dizer que o modelo se encontra em conformidade considerável com a variação os dados.
 
-## Teste 2006
-```{r}
-predictions <- mod_2006 %>% predict(testing_data_2006)
-
-data.frame( R2 = R2(predictions, testing_data_2006$votos),
-            RMSE = RMSE(predictions, testing_data_2006$votos),
-            MAE = MAE(predictions, testing_data_2006$votos),
-            ERR = RMSE(predictions, testing_data_2006$votos)/
-              mean(testing_data_2006$votos))
-```
-
-O modelo conseguiu um R² de 0,48, isso significa que esse modelo explica aproximadamente 48% da variabilidade da variável resposta.
-A diferença média entre os valores de resultados conhecidos observados e os valores previstos pelo modelo (RMSE) foi de aproximadamente 30105.75 issod quer dizer que o modelo erraria aproximadamente 30105, ou seja, se o candidato tivesse um milhão de votos, nós preveríamos até 30105 mais/menos do que deveríamos
-A diferença absoluta média entre os resultados observados e previstos (MAE) foi de aproximadamente 12779.06.
-A taxa de erro de previsão (ERR) foi de 1.399249.
-
 ## Validação 2006
 ```{r}
 predictions <- mod_2006 %>% predict(validate_data_2006)
@@ -711,6 +697,22 @@ O modelo conseguiu um R² de 0,71, isso significa que esse modelo explica aproxi
 A diferença média entre os valores de resultados conhecidos observados e os valores previstos pelo modelo (RMSE) foi de aproximadamente 23389.79 issod quer dizer que o modelo erraria aproximadamente 29604, ou seja, se o candidato tivesse um milhão de votos, nós preveríamos até 29326 mais/menos do que deveríamos
 A diferença absoluta média entre os resultados observados e previstos (MAE) foi de aproximadamente 12379.08
 A taxa de erro de previsão (ERR) foi de 0.9158357.
+
+## Teste 2006
+```{r}
+predictions <- mod_2006 %>% predict(testing_data_2006)
+
+data.frame( R2 = R2(predictions, testing_data_2006$votos),
+            RMSE = RMSE(predictions, testing_data_2006$votos),
+            MAE = MAE(predictions, testing_data_2006$votos),
+            ERR = RMSE(predictions, testing_data_2006$votos)/
+              mean(testing_data_2006$votos))
+```
+
+O modelo conseguiu um R² de 0,48, isso significa que esse modelo explica aproximadamente 48% da variabilidade da variável resposta.
+A diferença média entre os valores de resultados conhecidos observados e os valores previstos pelo modelo (RMSE) foi de aproximadamente 30105.75 issod quer dizer que o modelo erraria aproximadamente 30105, ou seja, se o candidato tivesse um milhão de votos, nós preveríamos até 30105 mais/menos do que deveríamos
+A diferença absoluta média entre os resultados observados e previstos (MAE) foi de aproximadamente 12779.06.
+A taxa de erro de previsão (ERR) foi de 1.399249.
 
 # Um novo modelo para 2010
 ```{r}
@@ -772,21 +774,6 @@ mod_2010 %>%
 
 Vemos também valores extremamente menores para distancia de cook e para bem menos pontos distoantes, o que pode nos dizer que o modelo se encontra em conformidade considerável com os a variação dos dados.
 
-## Teste 2010
-```{r}
-predictions <- mod_2010 %>% predict(testing_data_2010)
-
-data.frame( R2 = R2(predictions, testing_data_2010$votos),
-            RMSE = RMSE(predictions, testing_data_2010$votos),
-            MAE = MAE(predictions, testing_data_2010$votos),
-            ERR = RMSE(predictions, testing_data_2010$votos)/
-              mean(testing_data_2010$votos))
-```
-O modelo conseguiu um R² de 0,57, isso significa que esse modelo explica aproximadamente 57% da variabilidade da variável resposta.
-A diferença média entre os valores de resultados conhecidos observados e os valores previstos pelo modelo (RMSE) foi de aproximadamente 29194.57 isso quer dizer que o modelo erraria aproximadamente 29194, ou seja, se o candidato tivesse um milhão de votos, nós preveríamos até 29194 mais/menos do que deveríamos
-A diferença absoluta média entre os resultados observados e previstos (MAE) foi de aproximadamente 11922.71.	
-A taxa de erro de previsão (ERR) foi de 1.380304.
-
 ## Validação 2010
 ```{r}
 predictions <- mod_2010 %>% predict(validate_data_2010)
@@ -802,6 +789,22 @@ O modelo conseguiu um R² de 0.55, isso significa que esse modelo explica aproxi
 A diferença média entre os valores de resultados conhecidos observados e os valores previstos pelo modelo (RMSE) foi de aproximadamente 28410.54 issod quer dizer que o modelo erraria aproximadamente 28410, ou seja, se o candidato tivesse um milhão de votos, nós preveríamos até 28410 mais/menos do que deveríamos
 A diferença absoluta média entre os resultados observados e previstos (MAE) foi de aproximadamente 11804.81.
 A taxa de erro de previsão (ERR) foi de 1.428713.
+
+## Teste 2010
+```{r}
+predictions <- mod_2010 %>% predict(testing_data_2010)
+
+data.frame( R2 = R2(predictions, testing_data_2010$votos),
+            RMSE = RMSE(predictions, testing_data_2010$votos),
+            MAE = MAE(predictions, testing_data_2010$votos),
+            ERR = RMSE(predictions, testing_data_2010$votos)/
+              mean(testing_data_2010$votos))
+```
+
+O modelo conseguiu um R² de 0,57, isso significa que esse modelo explica aproximadamente 57% da variabilidade da variável resposta.
+A diferença média entre os valores de resultados conhecidos observados e os valores previstos pelo modelo (RMSE) foi de aproximadamente 29194.57 isso quer dizer que o modelo erraria aproximadamente 29194, ou seja, se o candidato tivesse um milhão de votos, nós preveríamos até 29194 mais/menos do que deveríamos
+A diferença absoluta média entre os resultados observados e previstos (MAE) foi de aproximadamente 11922.71.	
+A taxa de erro de previsão (ERR) foi de 1.380304.
 
 # Um modelo conjunto
 
@@ -901,21 +904,6 @@ mod %>%
 
 Vemos também valores um pouco altos para distancia de cookmas para poucos pontos, o que pode nos dizer que o modelo se encontra em conformidade considerável com os a variação dos dados.
 
-## Teste
-```{r}
-predictions <- mod %>% predict(testing_data)
-
-data.frame( R2 = R2(predictions, testing_data$votos),
-            RMSE = RMSE(predictions, testing_data$votos),
-            MAE = MAE(predictions, testing_data$votos),
-            ERR = RMSE(predictions, testing_data$votos)/
-              mean(testing_data$votos))
-```
-O modelo conseguiu um R² de 0,45, isso significa que esse modelo explica aproximadamente 57% da variabilidade da variável resposta.
-A diferença média entre os valores de resultados conhecidos observados e os valores previstos pelo modelo (RMSE) foi de aproximadamente 37515.32 isso quer dizer que o modelo erraria aproximadamente 37515, ou seja, se o candidato tivesse um milhão de votos, nós preveríamos até 37515 mais/menos do que deveríamos
-A diferença absoluta média entre os resultados observados e previstos (MAE) foi de aproximadamente 13578.44.	
-A taxa de erro de previsão (ERR) foi de 1.686544.
-
 ## Validação
 ```{r}
 predictions <- mod %>% predict(validate_data)
@@ -932,5 +920,20 @@ A diferença média entre os valores de resultados conhecidos observados e os va
 A diferença absoluta média entre os resultados observados e previstos (MAE) foi de aproximadamente 13833.14.	
 A taxa de erro de previsão (ERR) foi de 
 
-> Com base nesses dados posso afirmar que o modelo é satisfátório, porem pode ser bastante melhorado,
-algumas das suas estatisticas de residuos mostram problemas e seu R² ainda pode ser considerado muito baixo.
+## Teste
+```{r}
+predictions <- mod %>% predict(testing_data)
+
+data.frame( R2 = R2(predictions, testing_data$votos),
+            RMSE = RMSE(predictions, testing_data$votos),
+            MAE = MAE(predictions, testing_data$votos),
+            ERR = RMSE(predictions, testing_data$votos)/
+              mean(testing_data$votos))
+```
+O modelo conseguiu um R² de 0,45, isso significa que esse modelo explica aproximadamente 57% da variabilidade da variável resposta.
+A diferença média entre os valores de resultados conhecidos observados e os valores previstos pelo modelo (RMSE) foi de aproximadamente 37515.32 isso quer dizer que o modelo erraria aproximadamente 37515, ou seja, se o candidato tivesse um milhão de votos, nós preveríamos até 37515 mais/menos do que deveríamos
+A diferença absoluta média entre os resultados observados e previstos (MAE) foi de aproximadamente 13578.44.	
+A taxa de erro de previsão (ERR) foi de 1.686544.
+
+> Com base nesses dados posso afirmar que o modelo não é muito satisfátório, porem pode ser bastante melhorado,
+principalmente porque algumas das suas estatisticas de residuos mostram problemas e seu R² ainda pode ser considerado muito baixo, pois foi um pouco inferior aos encontrados nos modelos com todas as variáveis, mas muito mais simples.
